--- a/ImageProTool.rc
+++ b/ImageProTool.rc
@@ -174,6 +174,8 @@ BEGIN
     BEGIN
         MENUITEM "RGBtoGray",                   ID_RGBTOGRAY
         MENUITEM "Histogram",                   ID_HISTOGRAM
+        MENUITEM "GlobalThresholding",          ID_CHAP_GLOBALTHRESHOLDING
+        MENUITEM "HistogramStretching",         ID_CHAP_HISTOGRAMSTRETCHING
     END
 END
 
