--- a/ImageProTool.rc
+++ b/ImageProTool.rc
@@ -191,6 +191,7 @@ BEGIN
     BEGIN
         MENUITEM "BinaryDilation",              ID_CHAP_BINARYDILATION
         MENUITEM "BinaryErosion",               ID_CHAP_BINARYEROSION
+        MENUITEM "ConnectedLabeling",           ID_CHAP_CONNECTEDLABELING
     END
 END
 
