--- a/ImageProTool.rc
+++ b/ImageProTool.rc
@@ -202,6 +202,11 @@ BEGIN
     BEGIN
         MENUITEM "SearchShark",                 ID_HOMEWORK_SEARCHSHARK
     END
+    POPUP "Homework.4"
+    BEGIN
+        MENUITEM "naiveBayes",                  ID_HOMEWORK_NAIVEBAYES
+        MENUITEM "ParseBMPtoTXT",               ID_HOMEWORK_PARSEBMPTOTXT
+    END
 END
 
 
